--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ h1{
   height:400px;
   object-fit:cover;
   opacity:.9;
-  margin-top:24px; /* FOTO BAJADA */
+  margin-top:12px; /* 🔧 SUBIDA UN POCO */
 }
 
 /* PORTFOLIO */
@@ -304,7 +304,6 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
@@ -312,7 +311,6 @@ h1{
   </div>
 </section>
 
-<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
@@ -333,90 +331,10 @@ h1{
   </div>
 </section>
 
-<!-- PORTFOLIO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
-          <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
-          <div class="project-inner"><h2>Sixay · Cómoda</h2><span>Diseño de mobiliario</span></div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
-          <div class="project-inner"><h2>Exploración material</h2><span>Proyecto experimental</span></div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-image"><img src="conceptual.jpg" alt=""></div>
-          <div class="project-inner"><h2>Proyecto conceptual</h2><span>Diseño de producto</span></div>
-        </a>
-
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CV -->
-<section class="section">
-  <div class="section-block">
-    <h1>CV</h1>
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Jaume I</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Politècnica de València</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Programa Erasmus</strong><span>Londres</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
-
-    </div>
-  </div>
-</section>
-
-<!-- CONTACTO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Contacto</h1>
-    <div class="contact">
-      <a href="tel:+34600000000">+34 600 000 000<span>Teléfono</span></a>
-      <a href="mailto:luis@example.com">luis@example.com<span>Email</span></a>
-      <a href="https://www.linkedin.com" target="_blank">LinkedIn<span>Perfil profesional</span></a>
-    </div>
-  </div>
-</section>
-
 <script>
-/* NAV */
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
-});
-
-/* OBSERVER */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
-
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
-
-/* TIMELINE LINE */
-const line=document.getElementById("timelineLine");
-const timeline=document.querySelector(".timeline");
-
-window.addEventListener("scroll",()=>{
-  const r=timeline.getBoundingClientRect();
-  const h=Math.min(window.innerHeight-r.top,r.height);
-  line.style.height=Math.max(0,h)+"px";
 });
 </script>
 
