--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ h1{
 }
 
 .about img{
-  width:360px;          /* 🔧 MÁS GRANDE */
-  height:480px;         /* 🔧 MÁS GRANDE */
+  width:360px;
+  height:480px;
   object-fit:cover;
   opacity:.9;
   margin-top:12px;
@@ -242,7 +242,7 @@ h1{
         continuado en la Universitat Politècnica de València y completado con un programa Erasmus
         en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
         una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización.
+        desde la fase de análisis hasta la materialización final.
       </p>
       <img src="foto.jpg" alt="">
     </div>
