--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:560px;
+  max-width:565px; /* 🔧 AJUSTE */
   line-height:1.6;
   text-align:justify;
 }
@@ -242,7 +242,7 @@ h1{
         continuado en la Universitat Politècnica de València y completado con un programa Erasmus
         en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
         una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase destinada al análisis conceptual hasta la materialización terminal.
+        desde la fase de análisis hasta la materialización final.
       </p>
       <img src="foto.jpg" alt="">
     </div>
