--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ h1{
         continuado en la Universitat Politècnica de València y completado con un programa Erasmus
         en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
         una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización final.
+        desde la fase de análisis hasta la materialización terminal.
       </p>
       <img src="foto.jpg" alt="">
     </div>
