--- a/index.html
+++ b/index.html
@@ -326,14 +326,15 @@ h1{
         forma de pensar práctica.<br><br>
 
         Disfruto de todo el proceso de diseño, desde la fase de análisis y conceptualización hasta la
-        materialización final.
+        materialización del producto, entendiendo el diseño como una herramienta para resolver
+        problemas reales desde una perspectiva funcional, técnica y sensible al contexto.
       </p>
       <img src="foto.jpg" alt="">
     </div>
   </div>
 </section>
 
-<!-- Portfolio, CV, Contacto y JS permanecen idénticos a A -->
+<!-- Portfolio, CV, Contacto y JS permanecen EXACTAMENTE IGUAL -->
 
 <script>
 document.querySelectorAll("nav span").forEach((b,i)=>{
