--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:600px;
+  max-width:565px;
   line-height:1.6;
   text-align:justify;
 }
@@ -138,14 +138,37 @@ h1{
   display:flex;
   gap:48px;
   overflow-x:auto;
-  padding-bottom:20px;
+  padding-bottom:24px;
   scroll-behavior:smooth;
-  scrollbar-width:thin;
-  scrollbar-color:#444 transparent;
+
+  /* FIREFOX */
+  scrollbar-width:auto;
+  scrollbar-color:#aaa transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+/* WEBKIT SCROLLBAR */
+.portfolio-carousel::-webkit-scrollbar{
+  height:10px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-track{
+  background:rgba(255,255,255,.08);
+  border-radius:10px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#aaa;
+  border-radius:10px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb:hover{
+  background:#fff;
+}
+
+.portfolio-carousel::-webkit-scrollbar-button{
+  width:18px;
+  background:rgba(255,255,255,.15);
+}
 
 .project-card{
   min-width:460px;
@@ -162,7 +185,7 @@ h1{
 }
 
 .project-image{
-  height:300px;
+  height:260px;
   margin-bottom:20px;
   overflow:hidden;
 }
@@ -290,8 +313,8 @@ h1{
         ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
         continuado en la Universitat Politècnica de València y completado con un programa Erasmus
         en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
-        desde el periodo de desarrollo hasta la materialización terminal.
+        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
+        desde la fase de estudio hasta la materialización final.
       </p>
       <img src="foto.jpg" alt="">
     </div>
@@ -337,44 +360,11 @@ h1{
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
 
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Universitat Jaume I</strong>
-          <span>Grado en Ingeniería en Diseño Industrial</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Universitat Politècnica de València</strong>
-          <span>Grado en Ingeniería en Diseño Industrial</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Programa Erasmus</strong>
-          <span>Londres</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Idiomas</h3>
-          <strong>Español · Inglés · Húngaro</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Software</h3>
-          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-          <span>Fusion 360 · Sinutrain · 3ds Max</span>
-        </div>
-      </div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Universitat Jaume I</strong><span>Grado en Ingeniería en Diseño Industrial</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Universitat Politècnica de València</strong><span>Grado en Ingeniería en Diseño Industrial</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Programa Erasmus</strong><span>Londres</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
 
     </div>
   </div>
