--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:600px;
+  max-width:565px;
   line-height:1.6;
   text-align:justify;
 }
@@ -119,19 +119,7 @@ h1{
   position:relative;
   margin-top:32px;
   margin-left:8px;
-  overflow:hidden;
   padding-right:120px;
-}
-
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
 }
 
 .portfolio-carousel{
@@ -141,42 +129,24 @@ h1{
   padding-bottom:24px;
   scroll-behavior:smooth;
 
-  /* FIREFOX */
   scrollbar-width:auto;
   scrollbar-color:#aaa transparent;
 }
 
-/* WEBKIT SCROLLBAR */
-.portfolio-carousel::-webkit-scrollbar{
-  height:10px;
-}
+/* Scrollbar WebKit */
+.portfolio-carousel::-webkit-scrollbar{height:10px}
+.portfolio-carousel::-webkit-scrollbar-track{background:rgba(255,255,255,.08)}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#aaa;border-radius:10px}
+.portfolio-carousel::-webkit-scrollbar-thumb:hover{background:#fff}
 
-.portfolio-carousel::-webkit-scrollbar-track{
-  background:rgba(255,255,255,.08);
-  border-radius:10px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#aaa;
-  border-radius:10px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb:hover{
-  background:#fff;
-}
-
-.portfolio-carousel::-webkit-scrollbar-button{
-  width:18px;
-  background:rgba(255,255,255,.15);
-}
-
+/* PROJECT */
 .project-card{
-  min-width:460px;
+  min-width:520px;
   text-decoration:none;
   color:inherit;
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:.8s ease;
 }
 
 .project-card.is-visible{
@@ -185,7 +155,7 @@ h1{
 }
 
 .project-image{
-  height:260px;
+  height:340px;
   margin-bottom:20px;
   overflow:hidden;
 }
@@ -213,72 +183,47 @@ h1{
   text-transform:uppercase;
 }
 
-/* ===== CV ===== */
+/* ===== OVERLAY ARROWS ===== */
+.portfolio-arrow{
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  width:48px;
+  height:48px;
+  border-radius:50%;
+  background:rgba(255,255,255,.08);
+  border:1px solid rgba(255,255,255,.2);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  opacity:0;
+  transition:.3s ease;
+  backdrop-filter:blur(8px);
+}
+
+.portfolio-arrow svg{
+  width:18px;
+  stroke:#fff;
+}
+
+.portfolio-wrapper:hover .portfolio-arrow{
+  opacity:1;
+}
+
+.portfolio-arrow.left{
+  left:-24px;
+}
+
+.portfolio-arrow.right{
+  right:24px;
+}
+
+/* CV */
 .timeline{
   position:relative;
   margin-top:60px;
   padding-left:60px;
-}
-
-.timeline-line{
-  position:absolute;
-  left:20px;
-  top:0;
-  width:1px;
-  height:0;
-  background:linear-gradient(#fff,#777);
-  transition:height .3s ease-out;
-}
-
-.timeline-item{
-  position:relative;
-  margin-bottom:80px;
-  max-width:460px;
-  opacity:0;
-  transform:translateY(20px);
-  transition:.8s ease;
-}
-
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-44px;
-  top:50%;
-  transform:translateY(-50%);
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#fff;
-}
-
-.timeline-card{
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  border-radius:20px;
-  padding:28px;
-}
-
-.timeline-card h3{
-  font-size:18px;
-  font-weight:500;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
-
-.timeline-card span{
-  font-size:13px;
-  color:#888;
 }
 </style>
 </head>
@@ -308,13 +253,8 @@ h1{
       <p>
         Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
         enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
-        desde el periodo de desarrollo hasta la materialización terminal.
+        a distintos entornos y contextos de trabajo. Disfruto de todo el proceso de diseño desde la
+        fase de estudio hasta la materialización final.
       </p>
       <img src="foto.jpg" alt="">
     </div>
@@ -325,47 +265,36 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
 
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+    <div class="portfolio-wrapper">
+
+      <!-- ARROWS -->
+      <div class="portfolio-arrow left" id="arrowLeft">
+        <svg viewBox="0 0 24 24" fill="none"><path d="M15 18l-6-6 6-6" stroke-width="2"/></svg>
+      </div>
+
+      <div class="portfolio-arrow right" id="arrowRight">
+        <svg viewBox="0 0 24 24" fill="none"><path d="M9 6l6 6-6 6" stroke-width="2"/></svg>
+      </div>
+
+      <div class="portfolio-carousel" id="portfolioCarousel">
+
+        <a href="#" class="project-card">
+          <div class="project-image"><img src="brazo1.jpg"></div>
           <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
         </a>
 
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+        <a href="#" class="project-card">
+          <div class="project-image"><img src="reloj1.jpg"></div>
           <div class="project-inner"><h2>Sixay · Cómoda</h2><span>Diseño de mobiliario</span></div>
         </a>
 
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
-          <div class="project-inner"><h2>Exploración material</h2><span>Proyecto experimental</span></div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-image"><img src="conceptual.jpg" alt=""></div>
-          <div class="project-inner"><h2>Proyecto conceptual</h2><span>Diseño de producto</span></div>
+        <a href="#" class="project-card">
+          <div class="project-image"><img src="conceptual.jpg"></div>
+          <div class="project-inner"><h2>Conceptual</h2><span>Diseño de producto</span></div>
         </a>
 
       </div>
-    </div>
-  </div>
-</section>
-
-<!-- CV -->
-<section class="section">
-  <div class="section-block">
-    <h1>CV</h1>
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Universitat Jaume I</strong><span>Grado en Ingeniería en Diseño Industrial</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Universitat Politècnica de València</strong><span>Grado en Ingeniería en Diseño Industrial</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Programa Erasmus</strong><span>Londres</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
-
     </div>
   </div>
 </section>
@@ -382,18 +311,16 @@ const observer=new IntersectionObserver(entries=>{
   entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
 },{threshold:.2});
 
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
+document.querySelectorAll(".project-card").forEach(el=>observer.observe(el));
 
-/* TIMELINE LINE */
-const line=document.getElementById("timelineLine");
-const timeline=document.querySelector(".timeline");
-
-window.addEventListener("scroll",()=>{
-  const r=timeline.getBoundingClientRect();
-  const h=Math.min(window.innerHeight-r.top,r.height);
-  line.style.height=Math.max(0,h)+"px";
-});
+/* PORTFOLIO ARROWS */
+const carousel = document.getElementById("portfolioCarousel");
+document.getElementById("arrowLeft").onclick = () => {
+  carousel.scrollBy({ left:-600, behavior:"smooth" });
+};
+document.getElementById("arrowRight").onclick = () => {
+  carousel.scrollBy({ left:600, behavior:"smooth" });
+};
 </script>
 
 </body>
