--- a/index.html
+++ b/index.html
@@ -144,31 +144,23 @@ h1{
   scrollbar-color:#aaa transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{
-  height:10px;
-}
-
+.portfolio-carousel::-webkit-scrollbar{height:10px}
 .portfolio-carousel::-webkit-scrollbar-track{
   background:rgba(255,255,255,.08);
   border-radius:10px;
 }
-
 .portfolio-carousel::-webkit-scrollbar-thumb{
   background:#aaa;
   border-radius:10px;
 }
-
-.portfolio-carousel::-webkit-scrollbar-thumb:hover{
-  background:#fff;
-}
-
+.portfolio-carousel::-webkit-scrollbar-thumb:hover{background:#fff}
 .portfolio-carousel::-webkit-scrollbar-button{
   width:18px;
   background:rgba(255,255,255,.15);
 }
 
 .project-card{
-  min-width:540px; /* 🔧 MÁS ANCHO */
+  min-width:540px;
   text-decoration:none;
   color:inherit;
   opacity:0;
@@ -182,7 +174,7 @@ h1{
 }
 
 .project-image{
-  height:340px; /* 🔧 MÁS ALTA */
+  height:340px;
   margin-bottom:24px;
   overflow:hidden;
 }
@@ -194,9 +186,7 @@ h1{
   transition:transform .4s ease;
 }
 
-.project-card:hover img{
-  transform:scale(1.03);
-}
+.project-card:hover img{transform:scale(1.03)}
 
 .project-inner h2{
   font-size:28px;
@@ -224,7 +214,6 @@ h1{
   width:1px;
   height:0;
   background:linear-gradient(#fff,#777);
-  transition:height .3s ease-out;
 }
 
 .timeline-item{
@@ -268,23 +257,41 @@ h1{
   margin-bottom:16px;
 }
 
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
+.timeline-card strong{display:block;font-size:16px}
+.timeline-card span{font-size:13px;color:#888}
 
-.timeline-card span{
-  font-size:13px;
-  color:#888;
-}
-
-/* CONTACT */
+/* ===== CONTACTO ===== */
 .contact{
   margin-top:48px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
   gap:24px;
   padding-left:8px;
+}
+
+.contact a{
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  padding:28px;
+  border-radius:20px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.08);
+  color:#f5f5f5;
+  text-decoration:none;
+  transition:.35s ease;
+}
+
+.contact a span{
+  font-size:12px;
+  letter-spacing:.18em;
+  text-transform:uppercase;
+  color:#888;
+}
+
+.contact a:hover{
+  transform:translateY(-4px);
+  box-shadow:0 20px 40px rgba(0,0,0,.35);
 }
 </style>
 </head>
@@ -336,29 +343,80 @@ h1{
       <div class="portfolio-carousel">
 
         <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-image"><img src="brazo1.jpg"></div>
           <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
         </a>
 
         <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-image"><img src="reloj1.jpg"></div>
           <div class="project-inner"><h2>Sixay · Cómoda</h2><span>Diseño de mobiliario</span></div>
         </a>
 
         <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-image"><img src="secador2.jpg"></div>
           <div class="project-inner"><h2>Exploración material</h2><span>Proyecto experimental</span></div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-image"><img src="conceptual.jpg" alt=""></div>
-          <div class="project-inner"><h2>Proyecto conceptual</h2><span>Diseño de producto</span></div>
         </a>
 
       </div>
     </div>
   </div>
 </section>
+
+<!-- CV -->
+<section class="section">
+  <div class="section-block">
+    <h1>CV</h1>
+    <div class="timeline">
+      <div class="timeline-line" id="timelineLine"></div>
+
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>UJI</strong><span>Ingeniería en Diseño Industrial</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>UPV</strong><span>Ingeniería en Diseño Industrial</span></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Erasmus</h3><strong>Londres</strong></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
+      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CONTACTO -->
+<section class="section">
+  <div class="section-block">
+    <h1>Contacto</h1>
+    <div class="contact">
+      <a href="tel:+34600000000">+34 600 000 000<span>Teléfono</span></a>
+      <a href="mailto:luis@example.com">luis@example.com<span>Email</span></a>
+      <a href="https://www.linkedin.com" target="_blank">LinkedIn<span>Perfil profesional</span></a>
+    </div>
+  </div>
+</section>
+
+<script>
+/* NAV */
+document.querySelectorAll("nav span").forEach((b,i)=>{
+  b.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
+});
+
+/* OBSERVER */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+},{threshold:.2});
+
+document.querySelectorAll(".project-card,.timeline-item")
+  .forEach(el=>observer.observe(el));
+
+/* TIMELINE LINE */
+const line=document.getElementById("timelineLine");
+const timeline=document.querySelector(".timeline");
+
+window.addEventListener("scroll",()=>{
+  if(!timeline) return;
+  const r=timeline.getBoundingClientRect();
+  const h=Math.min(window.innerHeight-r.top,r.height);
+  line.style.height=Math.max(0,h)+"px";
+});
+</script>
 
 </body>
 </html>
