--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ h1{
 /* ===== PORTFOLIO ===== */
 .portfolio-wrapper{
   position:relative;
-  margin-top:32px;
+  margin-top:56px; /* 🔧 MÁS SEPARACIÓN DEL TÍTULO */
   margin-left:8px;
   overflow:hidden;
   padding-right:120px;
