--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ h1{
 /* ===== PORTFOLIO ===== */
 .portfolio-wrapper{
   position:relative;
-  margin-top:56px; /* 🔧 MÁS SEPARACIÓN DEL TÍTULO */
+  margin-top:56px;
   margin-left:8px;
   overflow:hidden;
   padding-right:120px;
@@ -174,7 +174,7 @@ h1{
 }
 
 .project-image{
-  height:340px;
+  height:310px; /* 🔧 REDUCIDA */
   margin-bottom:24px;
   overflow:hidden;
 }
